--- a/src/styles/accueil.css
+++ b/src/styles/accueil.css
@@ -143,3 +143,85 @@
 {
     color: rgb(51, 48, 48);
 }
+
+
+.produits
+{
+    padding: 30px 40px;
+    width: 100%;
+}
+
+.produits .container
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.produits .container .box
+{
+    padding: 10px 20px;
+    width: 250px;
+    height: 300px;
+    overflow: hidden;
+    /* border: 1px solid rgb(100, 95, 95);  */
+    margin-left: 1vw;   
+    transition: 0.5;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.line
+{
+    width: 14%;
+    height: 5px;
+    background-color: black;
+    margin-top: 10px;
+}
+
+.produits .container .box:hover
+{
+    box-shadow:  rgba(0, 0, 0, 0.2) 5px 10px 15px;
+}
+
+.produits .container .box .img_box
+{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(184, 170, 170);
+    margin-bottom: 5px;
+}
+
+.produits .container .box .img_box img
+{
+    width: 200px;
+    height: 200px;
+}
+
+.produits .container .box .img_box .icon
+{
+    /* position: absolute;
+    margin-left: 185px; */
+    z-index: 1;
+    position: relative;
+    right: 8px;
+    display: flex;
+    flex-direction: column;
+}
+
+.produits .container .box .img_box .icon li
+{
+    list-style: none;
+    padding: 10px 10px;
+    box-shadow:  rgba(0, 0, 0, 0.2) 5px 10px 15px;
+    cursor: pointer;
+    color: rgb(10, 10, 10);
+    background-color: white;
+    transition: 0.5s;
+}
+
+.produits .container .box .img_box .icon li:hover
+{
+    background-color: rgb(8, 54, 114);
+    color: white;
+}
