--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -24,3 +24,45 @@
     width: 100%;
     height: 23vw;
 }
+
+.banner .container .detail h4
+{
+    color: rgb(201, 201, 195);
+    font-size: 17px;
+    letter-spacing: 1px;
+}
+
+.banner .container .detail h3
+{
+    font-size: 45px;
+    margin-top: 6px;
+    color: white;
+}
+
+.banner .container .detail p
+{
+    font-size: 32px;
+    color: rgb(160, 164, 168);
+    margin-top: 35px;
+}
+
+.banner .container .detail .link
+{
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+    margin-top: 20vw;
+    background-color: black;
+    transition: 0.5s;
+    border-radius: 5px;
+}
+
+.banner .container .detail .link:hover
+{
+    padding: 10px 20px;
+    color: black;
+    text-decoration: none;
+    margin-top: 2vw;
+    background-color: white;
+    transition: 0.5s;
+}
